# embeddedCmakeExamples

./: COPYING.MIT  README.md
basePrj/: CMakeLists.txt
basePrj/libs/hello/: CMakeLists.txt
targetPrj/: CMakeLists.txt  flash.jlink  gdbInit
targetPrj/libs/hello/inc/: hello.h
targetPrj/libs/hello/src/: hello.c
targetPrj/src/: main.c
